# airc-rl-agent

./: LICENSE  README.md  config.py  config.yml  demo.py  fps_test.py  install_jetpack.sh  install_jetpack_docker.sh  racer.py  setup.cfg  setup.py  train.py
agent/: agent.py
commands/: subcommand.py
config/: __init__.py  config.py
docker/jetbot/: Dockerfile  build.sh  enable.sh
learning_racer/: racer.py
learning_racer/agent/: __init__.py  agent.py  control_callback.py  utils.py
learning_racer/agent/auto_stop/: __init__.py  auto_stop_env.py
learning_racer/agent/interface/: base_wrapped_env.py
learning_racer/agent/simulator/: __init__.py  simulator_auto_stop_env.py  simulator_env.py
learning_racer/agent/teleoperation/: __init__.py  teleoperation_env.py
learning_racer/commands/: subcommand.py
learning_racer/config/: __init__.py  config.py
learning_racer/exce/: LearningRacerError.py  __init__.py
learning_racer/functions/auto_stop/: __init__.py  auto_stop_callbacks.py
learning_racer/functions/base/: __init__.py  base_agent_callbacks.py
learning_racer/functions/simulator/: __init__.py  simulator_callbacks.py
learning_racer/functions/teleoperation/: __init__.py  teleoperation_callbacks.py
learning_racer/record/: export_recorder.py
learning_racer/robot/: __init__.py
learning_racer/robot/donkey_sim/: donkey_sim_env.py
learning_racer/robot/donkey_sim/core/: simple_client.py
learning_racer/robot/jetbot/: jetbot_env.py
learning_racer/robot/jetbot/core/: controller.py
learning_racer/robot/jetracer/: jetracer_env.py
learning_racer/robot/jetracer/core/: controller.py  observer.py
learning_racer/sac/: __init__.py  custom_sac.py  hyperparam.py
learning_racer/teleoperate/: ipc_teleop.py  message_queue.py
learning_racer/utils/: logger.py
learning_racer/vae/: vae.py
notebook/utility/: data_collection.ipynb  vae_viewer.ipynb
notebooks/: user_interface.ipynb  user_interface_without_gamepad.ipynb  zmq_client.ipynb
notebooks/colabo/: VAE_CNN.ipynb
notebooks/recorder/: recorder.ipynb
notebooks/utility/: jetbot_data_collection_withoutgamepad.ipynb  jetbot_vae_viewer.ipynb  jetracer_data_collection.ipynb  jetracer_vae_viewer.ipynb  vae_viewer.ipynb
notebooks/utility/jetbot/: data_collection.ipynb  data_collection_withoutgamepad.ipynb  mobile.py  vae_viewer.ipynb
notebooks/utility/jetraecr/: data_collection.ipynb  vae_viewer.ipynb
robot/: __init__.py
robot/donkey_sim/: donkey_sim_env.py
robot/jetbot/: jetbot_env.py
robot/jetbot/core/: controller.py  observer.py
robot/jetson/core/: controller.py
sac/: __init__.py  hyperparam.py  policy_net.py
teleoperate/: __init__.py  ipc_teleop.py  message_queue.py  sock_teleop.py  teleoperation.py  util.py
vae/: vae.py
