[metadata]
name = learning_racer
version = 1.0.0
author = Masato Kawamura
author_email = jp6uzv@gmail.com
description = Deep reinforce learning for DIY self-driving car such as JetBot JetRacer.
long_description = file:README.md
url = https://github.com/masato-ka/airc-rl-agent
license = MIT

[options]
zip_safe = False
packages = find:
install_requires =

[options.extras_require]

jetpack42 =
    numpy==1.16.5
    grpcio
    absl-py
    py-cpuinfo
    psutil
    portpicker
    six
    mock
    requests
    gast
    h5py
    astor
    termcolor
    protobuf
    keras-applications
    keras-preprocessing
    wrapt
    google-pasta
    tensorflow-gpu @ https://developer.download.nvidia.com/compute/redist/jp/v42/tensorflow-gpu/tensorflow_gpu-1.14.0+nv19.7-cp36-cp36m-linux_aarch64.wh
#    torch @ https://nvidia.box.com/shared/static/ncgzus5o23uck9i5oth2n8n06k340l6k.whl
#    torchvision @ git+https://github.com/pytorch/vision.git@0.5.0
    Cython ~= 0.29.14
    posix_ipc ~= 1.0.4
    gym == 0.10.9
    stable_baselines == 2.9.0

jetpack43 =
    numpy
    grpcio
    absl-py
    py-cpuinfo
    psutil
    portpicker
    six
    mock
    requests
    gast
    h5py
    astor
    termcolor
    protobuf
    keras-applications
    keras-preprocessing
    wrapt
    google-pasta
    tensorflow-gpu @ https://developer.download.nvidia.com/compute/redist/jp/v43/tensorflow-gpu/tensorflow_gpu-1.15.0+nv20.1-cp36-cp36m-linux_aarch64.whl
#    torch @ https://nvidia.box.com/shared/static/ncgzus5o23uck9i5oth2n8n06k340l6k.whl
#    torchvision @ git+https://github.com/pytorch/vision.git@0.5.0
    Cython ~= 0.29.14
    posix_ipc ~= 1.0.4
    gym == 0.10.9
    stable_baselines == 2.9.0

jetcard =
    Cython ~= 0.29.14
    posix_ipc ~= 1.0.4
    gym == 0.17.1
    pyopengl == 3.1.5
    stable_baselines == 2.9.0
    pyyaml ~= 5.2

osx =
    opencv-python
    tensorflow ==1.15.0
    torch == 1.4.0
    torchvision == 0.5.0
    gym == 0.10.9
    stable_baselines == 2.9.0

windows =
    opencv-python
    tensorflow == 1.15.0
    torch == 1.4.0
    torchvision == 0.5.0
    gym == 0.10.9
    stable_baselines == 2.9.0


window-gpu =
    opencv-python
    tensorflow-gpu == 1.15.0
    torchvision == 0.5.0
    gym == 0.10.9
    stable_baselines == 2.9.0


[options.entry_points]
console_scripts =
    racer = learning_racer.racer:racer_func