[metadata]
name = learning_racer
version = 1.0.0
author = Masato Kawamura
author_email = jp6uzv@gmail.com
description = Deep reinforce learning for DIY self-driving car such as JetBot JetRacer.
long_description = file:README.md
url = https://github.com/masato-ka/airc-rl-agent
license = MIT

[options]
zip_safe = False
packages = find:
install_requires =
    pyyaml
    gym ~= 0.17.1
    gym-donkeycar @ git+https://github.com/tawnkramer/gym-donkeycar.git#egg=gym-donkeycar

[options.extras_require]

jetpack =
    posix_ipc ~= 1.0.4

osx =
    opencv-python
    tensorflow ==1.15.0
    torch == 1.4.0
    torchvision == 0.5.0
    stable_baselines == 2.9.0

ubuntu =
    opencv-python
    tensorflow ==1.15.0
    torch == 1.4.0
    torchvision == 0.5.0
    stable_baselines == 2.9.0

windows =
    opencv-python
    tensorflow == 1.15.0
    torch == 1.4.0
    torchvision == 0.5.0
    stable_baselines == 2.9.0

window-gpu =
    opencv-python
    tensorflow-gpu == 1.15.0
    torchvision == 0.5.0
    stable_baselines == 2.9.0


[options.entry_points]
console_scripts =
    racer = learning_racer.racer:racer_func